# controllers/movies.js
@@ -1,72 +1,80 @@
 const { body, validationResult } = require('express-validator');
+const express = require("express");
+const router = express.Router();
 
 const mongodb = require("../db/connect");
 const ObjectId = require("mongodb").ObjectId;
 
+const Joi = require('joi');
+
+const movieSchema = Joi.object({
+  title: Joi.string().required().messages({
+    'any.required': 'Title is required',
+  }),
+  release_year: Joi.number().required().messages({
+    'any.required': 'Release year is required',
+    'number.base': 'Release year must be a number',
+  }),
+  genre: Joi.string().required().messages({
+    'any.required': 'Genre is required',
+  }),
+  director: Joi.string().required().messages({
+    'any.required': 'Director is required',
+  }),
+  rating: Joi.number().required().messages({
+    'any.required': 'Rating is required',
+    'number.base': 'Rating must be a number',
+  }),
+});
+
 const getAllMovies = async (req, res) => {
   try {
     const db = mongodb.getDb();
-    const result = await db.collection("movies").find().toArray();
-    res.setHeader("Content-Type", "application/json");
-    res.status(200).json(result);
-  } catch (err) {
-    res
-      .status(500)
-      .json({
-        error: "An error occurred while fetching movies",
-        details: err.message,
-      });
+    const movies = await db.collection("movies").find().toArray();
+    res.json(movies);
+  } catch (error) {
+    res.status(500).json({ error: "Database query failed", details: error.message });
   }
 };
 
 const getMovieById = async (req, res) => {
   try {
-  const id = new ObjectId(req.params.id);
-  const db = mongodb.getDb();
-  const result = await db.collection("movies")
-    .findOne({ _id: id });
-    res.status(200).json(result);
-  } catch (err) {
-    res
-      .status(500)
-      .json({
-        error: "An error occurred while fetching movie",
-        details: err.message,
-      });
+    const id = new ObjectId(req.params.id);
+    const db = mongodb.getDb();
+    const movie = await db.collection("movies").findOne({ _id: id });
+    if (movie) {
+      res.json(movie);
+    } else {
+      res.status(404).json({ error: "Movie not found" });
+    }
+  } catch (error) {
+    res.status(500).json({ error: "Database query failed", details: error.message });
   }
 };
 
 const createMovie = async (req, res) => {
-
-  const errors = validationResult(req);
-  if (!errors.isEmpty()) {
-    return res.status(400).json({ errors: errors.array() });
+  const { error } = movieSchema.validate(req.body);
+  if (error) {
+    return res.status(400).json({ error: error.message });
   }
-
-  const movie = {
-    title: req.body.title,
-    release_year: req.body.release_year,
-    genre: req.body.genre,
-    director: req.body.director,
-    rating: req.body.rating,
-  };
 
   try {
+    const movie = {
+      title: req.body.title,
+      release_year: req.body.release_year,
+      genre: req.body.genre,
+      director: req.body.director,
+      rating: req.body.rating,
+    };
+
     const db = mongodb.getDb();
-    const result = await db.collection("movies").insertOne(movie);
-    res.status(201).json(result);
-  } catch (err) {
-    res.status(500).json({ message: "Error creating movie" });
+    const response = await db.collection("movies").insertOne(movie);
+
+    return res.status(201).json({ _id: response.insertedId, ...movie });
+  } catch (error) {
+    return res.status(500).json({ error: "Database insertion failed", details: error.message });
   }
 };
-
-router.post('/', [
-  body('title').isLength({ min: 1 }).withMessage('Title is required'),
-  body('release_year').isNumeric().withMessage('Release year must be a number'),
-  body('genre').isLength({ min: 1 }).withMessage('Genre is required'),
-  body('director').isLength({ min: 1 }).withMessage('Director is required'),
-  body('rating').isNumeric().withMessage('Rating must be a number'),
-], createMovie);
 
 const updateMovie = async (req, res) => {
   const errors = validationResult(req);
@@ -85,7 +93,7 @@ const updateMovie = async (req, res) => {
     };
 
     const db = mongodb.getDb();
-    const response = await db.collection("movies").replaceOne({ _id: id }, movie);
+    const response = await db.collection("movies").updateOne({ _id: id }, { $set: movie });
 
     if (response.modifiedCount > 0) {
       res.status(204).send();
@@ -97,34 +105,19 @@ const updateMovie = async (req, res) => {
   }
 };
 
-router.put('/:id', [
-  body('title').isLength({ min: 1 }).withMessage('Title is required'),
-  body('release_year').isNumeric().withMessage('Release year must be a number'),
-  body('genre').isLength({ min: 1 }).withMessage('Genre is required'),
-  body('director').isLength({ min: 1 }).withMessage('Director is required'),
-  body('rating').isNumeric().withMessage('Rating must be a number'),
-], updateMovie);
-
 const deleteMovie = async (req, res) => {
   try {
     const id = new ObjectId(req.params.id);
     const db = mongodb.getDb();
-    const response = await db.collection("movies")
-      .deleteOne({ _id: id }, true);
+    const response = await db.collection("movies").deleteOne({ _id: id });
 
     if (response.deletedCount > 0) {
       res.status(204).send();
     } else {
-      res
-        .status(500)
-        .json(
-          response.error || "Some error occurred while deleting the movie."
-        );
+      res.status(500).json(response.error || "Some error occurred while deleting the movie.");
     }
   } catch (error) {
-    res
-      .status(500)
-      .json({ error: "Database deletion failed", details: error.message });
+    res.status(500).json({ error: "Database deletion failed", details: error.message });
   }
 };
 
